Finally fixed slider on IE. Set Sockets IO event system.

--- a/resources/assets/sass/pages/main.scss
+++ b/resources/assets/sass/pages/main.scss
@@ -326,12 +326,12 @@ main {
   cursor: pointer;
 }
 
-.slider-range:disabled + .slider .slider-handle {
+.slider-handle.disabled {
   background: #b0b0b0;
   cursor: initial;
 }
 
-.slider-range:disabled + .slider .slider-fill {
+.slider-fill.disabled {
   background: #b0b0b0;
 }
 
